--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   */
   /*background: color image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 /* o * é seletor universal */
 body * {
@@ -84,6 +85,7 @@ body * {
   z-index: 1;
   top: 50%;
   transform: translateY(-50%);
+  animation: deslize-volta 0.4s forwards;
 }
 
 #switch span {
@@ -98,8 +100,11 @@ body * {
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: deslize 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 /* links */
 ul {
@@ -162,4 +167,34 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/*animation*/
+@keyframes deslize {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes deslize-volta {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
